<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:paddingStart="@dimen/panel_horizontal_padding"
              android:paddingEnd="@dimen/panel_horizontal_padding"

              android:background="@color/background"
              android:gravity="center_horizontal">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_space_between_views"
        android:layout_marginLeft="@dimen/margin_from_screen_borders"
        android:layout_marginRight="@dimen/margin_from_screen_borders"
        android:layout_marginBottom="@dimen/vertical_space_between_views"
        style="@style/App.TitleText"
        android:text="@string/select_image"/>


    <Button
        android:id="@+id/btn1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/App.Button.Primary"

        android:paddingLeft="@dimen/margin_from_screen_borders"
        android:paddingRight="@dimen/margin_from_screen_borders"
        android:layout_marginBottom="@dimen/vertical_space_buttons"
        android:text="@string/photo_from_camera"
        android:textColor="@color/text_primary"
        android:gravity="center"/>

    <Button
        android:id="@+id/btn2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/App.Button.Primary"

        android:paddingLeft="@dimen/margin_from_screen_borders"
        android:paddingRight="@dimen/margin_from_screen_borders"
        android:layout_marginBottom="@dimen/vertical_space_buttons"

        android:text="@string/file_from_disc"
        android:textColor="@color/text_primary"
        android:gravity="center"/>

    <Button
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/App.Button.Secondary"
        android:layout_margin="@dimen/margin_from_screen_borders"
        android:text="@string/cancel"/>

</LinearLayout>