<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
>
    <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fillViewport="true"
            android:id="@+id/main_container"
            android:background="@color/background"
    >
        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="@dimen/panel_horizontal_padding"
                android:paddingEnd="@dimen/panel_horizontal_padding"
        >
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/App.TitleText"
                    android:layout_gravity="center_horizontal"

                    android:text="@string/register_header"
            />

            <EditText
                    android:id="@+id/email_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/App.EditText"
                    android:singleLine="true"

                    android:inputType="textEmailAddress"
                    android:hint="@string/email"
            />

            <TextView
                    android:id="@+id/email_name_input_error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/vertical_space_between_views"
                    android:visibility="invisible"

                    android:textColor="@color/text_error"
                    android:text="@string/error_empty_field"
            />

            <EditText
                    android:id="@+id/first_name_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    style="@style/App.EditText"

                    android:inputType="text"
                    android:hint="@string/first_name"
            />

            <TextView
                    android:id="@+id/first_name_input_error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/vertical_space_between_views"
                    android:visibility="invisible"

                    android:textColor="@color/text_error"
                    android:text="@string/error_empty_field"
            />

            <EditText
                    android:id="@+id/last_name_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    style="@style/App.EditText"

                    android:inputType="text"
                    android:hint="@string/last_name"
            />

            <TextView
                    android:id="@+id/last_name_input_error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/vertical_space_between_views"
                    android:visibility="invisible"

                    android:textColor="@color/text_error"
                    android:text="@string/error_empty_field"
            />

            <EditText
                    android:id="@+id/date_of_birthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    style="@style/App.EditText"

                    android:drawableEnd="@drawable/ic_calendar"
                    android:drawablePadding="@dimen/edit_text_icon_padding"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:longClickable="false"

                    android:hint="@string/date_birthday"
            />

            <TextView
                    android:id="@+id/date_of_birthday_error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/vertical_space_between_views"
                    android:visibility="invisible"

                    android:textColor="@color/text_error"
                    android:text="@string/error_empty_field"
            />

            <Spinner
                    android:id="@+id/country_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/App.Spinner"

                    android:prompt="@string/country_prompt"
                    android:popupBackground="@color/hint_color"
            />

            <TextView
                    android:id="@+id/country_spinner_error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/vertical_space_between_views"
                    android:visibility="invisible"

                    android:textColor="@color/text_error"
                    android:text="@string/error_empty_field"
            />

            <Spinner
                    android:id="@+id/federation_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/App.Spinner"

                    android:prompt="@string/federation_prompt"
                    android:popupBackground="@color/hint_color"
            />

            <TextView
                    android:id="@+id/federation_spinner_error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/vertical_space_between_views"
                    android:visibility="invisible"

                    android:textColor="@color/text_error"
                    android:text="@string/error_empty_field"
            />

            <Spinner
                    android:id="@+id/area_of_interest_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/App.Spinner"

                    android:prompt="@string/area_of_interest_prompt"
                    android:popupBackground="@color/hint_color"
            />

            <TextView
                    android:id="@+id/area_of_interest_spinner_error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/vertical_space_between_views"
                    android:visibility="invisible"

                    android:textColor="@color/text_error"
                    android:text="@string/error_empty_field"
            />

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal"
                          android:id="@+id/consent_checkbox_row"
            >
                <TextView android:layout_width="0dp"
                          android:layout_weight="1"
                          android:layout_height="match_parent"
                          android:gravity="center_vertical"
                          android:text="@string/consent_text"
                          android:paddingEnd="@dimen/checkbox_text_padding"
                />
                <CheckBox android:id="@+id/consent_checkbox"
                          android:layout_width="?android:attr/listPreferredItemHeightSmall"
                          android:layout_height="?android:attr/listPreferredItemHeightSmall"
                />
            </LinearLayout>

            <TextView
                    android:id="@+id/consent_link"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:textColor="@color/primary"
                    android:text="@string/consent_text_link"
            />

            <TextView
                    android:id="@+id/consent_checkbox_error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/vertical_space_between_views"
                    android:visibility="invisible"

                    android:textColor="@color/text_error"
                    android:text="@string/error_empty_field"
            />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/vertical_space_buttons"
                    android:layout_marginBottom="@dimen/vertical_space_between_views"
                    android:orientation="horizontal"
                    android:gravity="center">
                <Button
                        style="@style/App.Button.Secondary"
                        android:id="@+id/bnt_verify"

                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:text="@string/verify_diver"/>

                <Button
                        style="@style/App.Button.Primary"
                        android:id="@+id/bnt_register"

                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:text="@string/forward"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>