<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
>
    <!--    <ScrollView-->
    <!--            android:layout_width="fill_parent"-->
    <!--            android:layout_height="fill_parent"-->
    <!--            android:fillViewport="true"-->
    <!--            android:id="@+id/main_container"-->
    <!--            android:background="@color/background"-->
    <!--    >-->
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/background"

            android:orientation="vertical"
            android:paddingStart="@dimen/panel_horizontal_padding"
            android:paddingEnd="@dimen/panel_horizontal_padding"
    >
        <RelativeLayout
                android:id="@+id/loadingPanel"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

            <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminate="true"/>
        </RelativeLayout>

        <LinearLayout
                android:id="@+id/controlsPanel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
        >
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/App.TitleText"
                    android:layout_gravity="center_horizontal"

                    android:text="@string/reg_add_certificates_header"
            />

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/images"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"

                    android:scrollbars="vertical"
                    android:scrollbarThumbVertical="@color/disabled"
                    android:scrollbarSize="@dimen/scroll_bar_size"
            />

            <Button
                    style="@style/App.Button.Primary"
                    android:id="@+id/add_image"

                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/vertical_space_between_views"

                    android:text="@string/add_certificate_image"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/vertical_space_buttons"
                    android:layout_marginBottom="@dimen/vertical_space_between_views"

                    android:orientation="horizontal"
                    android:gravity="center">
                <Button
                        style="@style/App.Button.Secondary"
                        android:id="@+id/bnt_back"

                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_width="0dp"

                        android:text="@string/back"/>

                <Button
                        style="@style/App.Button.Primary"
                        android:id="@+id/bnt_register"

                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_width="0dp"

                        android:text="@string/submit"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <!--    </ScrollView>-->
</layout>